--- a/currículum.html
+++ b/currículum.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La parte de arriba</title>
+    <title>CV de Gabriel Montenegro</title>
 </head>
 
 <body>
     <!-- ctrol + } para hacer comentarios -->
-    <h1>Encabezado 1</h1>
-    <h2>Encabezado 2</h2>
-    <h3>Encabezado 3</h3>
+    <center>
+    <h1>Gabriel Montenegro</h1>
+    </center>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum vitae rerum quis consequuntur velit numquam, optio
         laudantium ex ipsum tenetur provident accusamus esse. Quisquam, aliquam sit ad voluptatibus excepturi veritatis.
     </p>
