modifiqué la imagen del errer

--- a/currículum.html
+++ b/currículum.html
@@ -9,30 +9,27 @@
 
 <body>
     <!-- ctrol + } para hacer comentarios -->
-    <center>
     <h1>Gabriel Montenegro</h1>
-    </center>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum vitae rerum quis consequuntur velit numquam, optio
-        laudantium ex ipsum tenetur provident accusamus esse. Quisquam, aliquam sit ad voluptatibus excepturi veritatis.
-    </p>
+    <img src="fotitos/IMG_20210331_012054.jpg" width="175" height="200">
+    <h2>19 años de edad</h2>
+    <h3>José C. Paz 464, La Tablada, Provincia de Buenos Aires</h3>
+    <p><b>Series preferidas</b> (sin orden númérico)</p>
     <ul>
-        <li>River</li>
-        <li>Boca</li>
-        <li>Independiente</li>
+        <li>The Walking Dead</li>
+        <li>Doctor House</li>
+        <li>Grey´s Anatomy</li>
     </ul>
+    <p><b>Mi top personal de películas</b></p>
     <ol>
-        <li>River</li>
-        <li>Boca</li>
-        <li>Independiente</li>
+        <li>Titanic</li>
+        <li>Avatar</li>
+        <li>Avengers End Game</li>
     </ol>
-    <p>
-        <a href="https://www.youtube.com/" target="_blank">Ir a la página</a>
-    </p>
-    <p>
-        <a href="imagenes.html">Ir a las imágenes</a>
-    </p>
-
-
+    <p><b>Perfil</b> (cosas que me gusta o no hacer)</p>
+    <p>Me gustan las matemáticas, es uno de los motivos por los que elegí la carrera de ingeniería en sistemas en la UTN, no solo aprenderlas sino también enseñarlas.</p>
+    <p>No me gusta el dibujo, detesto tener que dibujar o pintar algo con mis propias manos.</p>
+    <p>Me gusta el inglés, me parece una lengua que tiene un tono increíble en la pronunciación, pero no lo domino del todo.</p>
+    <p>Si querés contactarme podés rellenar el siguiente formulario: <a href="imagenes.html">Ir al formulario</a></p>
 </body>
 
 </html>
