--- a/imagenes.html
+++ b/imagenes.html
@@ -1,2 +1,3 @@
-<h3>Imagenes del proyecto</h3>
-<img src="fotitos/nachota.jpg" alt="">
+<center>
+<img src="fotitos/http_code_404_error.jpg" alt="" width="1200">
+</center>
