--- a/currículum.html
+++ b/currículum.html
@@ -5,22 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV de Gabriel Montenegro</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- ctrol + } para hacer comentarios -->
+<div class="contenedor">
     <h1>Gabriel Montenegro</h1>
     <img src="fotitos/IMG_20210331_012054.jpg" width="175" height="200">
     <h2>19 años de edad</h2>
     <h3>José C. Paz 464, La Tablada, Provincia de Buenos Aires</h3>
-    <p><b>Series preferidas</b> (sin orden númérico)</p>
-    <ul>
-        <li>The Walking Dead</li>
-        <li>Doctor House</li>
-        <li>Grey´s Anatomy</li>
+    <p class="listas"><b>Series preferidas</b> (sin orden númérico)</p>
+    <ul class="listas">
+        <li class="listas">The Walking Dead</li>
+        <li class="listas">Doctor House</li>
+        <li class="listas">Grey´s Anatomy</li>
     </ul>
-    <p><b>Mi top personal de películas</b></p>
-    <ol>
+    <p class="listas"><b>Mi top personal de películas</b></p>
+    <ol class="listas">
         <li>Titanic</li>
         <li>Avatar</li>
         <li>Avengers End Game</li>
@@ -29,7 +31,8 @@
     <p>Me gustan las matemáticas, es uno de los motivos por los que elegí la carrera de ingeniería en sistemas en la UTN, no solo aprenderlas sino también enseñarlas.</p>
     <p>No me gusta el dibujo, detesto tener que dibujar o pintar algo con mis propias manos.</p>
     <p>Me gusta el inglés, me parece una lengua que tiene un tono increíble en la pronunciación, pero no lo domino del todo.</p>
-    <p>Si querés contactarme podés rellenar el siguiente formulario: <a href="imagenes.html">Ir al formulario</a></p>
+    <p>Si querés contactarme podés rellenar el siguiente formulario: <a href="imagenes.html" class="clicki">Ir al formulario</a></p>
+</div>
 </body>
 
 </html>
